tests/zer_fail/dalpha4_save_context_arg_count.zer
// EXPECTED: compile error
// @cpu_save_context requires exactly 1 argument

i32 main() {
    @cpu_save_context();  // error: needs 1 argument
    return 0;
}
